fix: in file style and header removed extra spaces; added one notation for font and bg

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,12 +1,3 @@
-.header {
-    /* margin: 0 auto; */
-    /* max-width: 2000px; */
-    /* background-image: url(/src/header/header_bg.png);
-    background-repeat: no-repeat;
-    background-size: 899px 754px;
-    background-position: right center; */
-}
-
 .header-row {
     display: flex;
     justify-content: space-between;
@@ -15,24 +6,20 @@
 }
 
 .logo {
-    background-image: url(/src/header/skydrone_icon.svg);
-    background-size: 21px 21px;
-    background-position: center left;
-    background-repeat: no-repeat;
+    padding-left: 25px;
+    background: url(/src/header/skydrone_icon.svg) no-repeat left center;
 }
 
 .logo a {
-    padding-left: 25px;
     font-size: 30px;
-    color: var(--primary-color);
     font-weight: 700;
     line-height: 1.5;
+    color: inherit;
 }
 
 .header-logo__logo {
     padding-left: 4px;
     font-size: 30px;
-    color: var(--primary-color);
     font-weight: 700;
     line-height: 1.5;
 }
@@ -61,7 +48,7 @@
     max-width: 560px;
 }
 
-.header-main__content h1 {
+.header-main__title {
     margin-bottom: 24px;
 }
 
