--- a/styles/style.css
+++ b/styles/style.css
@@ -6,19 +6,12 @@
 }
 
 body {
-    font-family: 'Raleway', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    /* color: var(--primary-color); */
-    color: --primary-color;
+    font: normal 400 16px/1.3 Raleway, sans-serif;
+    color: var(--primary-color);
 }
 
 .title {
-    font-size: 48px;
-    color: var(--primary-color);
-    font-weight: 700;
-    line-height: 1.2;
-    letter-spacing: -1;
+    font: normal 700 48px/1.2 Raleway, sans-serif;
 }
 
 .button {
